Added fist valid version of contacts endpoints
