# docs/swagger.json
@@ -125,6 +125,18 @@
         }
     },
     "definitions": {
+        "dto.AddContactInputDto": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "minLength": 2
+                }
+            }
+        },
         "dto.GetMeOutputDto": {
             "type": "object",
             "properties": {
